--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  animate_do: ^3.3.4
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
