--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   go_router: ^14.0.2
   google_fonts: ^6.2.1
+  curved_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
