--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,20 +7,22 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
-  table_calendar: ^3.1.1
   animate_do: ^3.3.4
+  curved_navigation_bar: ^1.0.1
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   flutter_svg: ^2.0.10+1
   go_router: ^14.0.2
   google_fonts: ^6.2.1
-  curved_navigation_bar: ^1.0.1
+  table_calendar: ^3.1.1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  
 
 flutter:
   uses-material-design: true
